--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/algafood?createDatabaseIfNotExist=true&serverTimezone=UTC
 spring.datasource.username=israel
 spring.datasource.password=123
+
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=create
