--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/algafood?createDatabaseIfNotExist=true&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/aw_algafood?createDatabaseIfNotExist=true&serverTimezone=UTC
 spring.datasource.username=israel
 spring.datasource.password=123
 
