--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
 	<properties>
 		<java.version>12</java.version>
 		<modelmapper.version>2.3.0</modelmapper.version>
+		<squiggly.version>1.3.18</squiggly.version>
 	</properties>
 
 	<dependencies>
@@ -66,9 +67,14 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-		  <groupId>org.modelmapper</groupId>
-		  <artifactId>modelmapper</artifactId>
-		  <version>${modelmapper.version}</version>
+			<groupId>org.modelmapper</groupId>
+			<artifactId>modelmapper</artifactId>
+			<version>${modelmapper.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.github.bohnman</groupId>
+			<artifactId>squiggly-filter-jackson</artifactId>
+			<version>${squiggly.version}</version>
 		</dependency>
 	</dependencies>
 
