--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,3 +24,5 @@ spring.datasource.hikari.minimum-idle=3
 spring.datasource.hikari.idle-timeout=10000
 
 #spring.jackson.property-naming-strategy=SNAKE_CASE
+
+#spring.data.web.pageable.default-page-size=15
