--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,6 +23,9 @@ spring.datasource.hikari.maximum-pool-size=5
 spring.datasource.hikari.minimum-idle=3
 spring.datasource.hikari.idle-timeout=10000
 
+#spring.servlet.multipart.max-file-size=20KB
+#spring.servlet.multipart.max-request-size=20MB
+
 #spring.jackson.property-naming-strategy=SNAKE_CASE
 
 #spring.data.web.pageable.default-page-size=15
