--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,6 +25,12 @@ spring.datasource.hikari.idle-timeout=10000
 
 algafood.storage.local.diretorio-fotos=/mnt/arquivos/workspaces/algafood/catalogo/
 
+#algafood.storage.s3.id-chave-acesso=
+#algafood.storage.s3.chave-acesso-secreta=
+algafood.storage.s3.bucket=algafood-israel
+algafood.storage.s3.regiao=sa-east-1
+algafood.storage.s3.diretorio-fotos=catalogo
+
 #spring.servlet.multipart.max-file-size=20KB
 #spring.servlet.multipart.max-request-size=20MB
 
