--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,6 +23,8 @@ spring.datasource.hikari.maximum-pool-size=5
 spring.datasource.hikari.minimum-idle=3
 spring.datasource.hikari.idle-timeout=10000
 
+algafood.storage.tipo=local
+
 algafood.storage.local.diretorio-fotos=/mnt/arquivos/workspaces/algafood/catalogo/
 
 #algafood.storage.s3.id-chave-acesso=
