--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -38,6 +38,8 @@ spring.mail.port=587
 spring.mail.username=apikey
 #spring.mail.password=
 
+algafood.email.remetente=AlgaFood <naoresponder@algafood.com.br>
+
 
 #spring.servlet.multipart.max-file-size=20KB
 #spring.servlet.multipart.max-request-size=20MB
