--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -37,8 +37,7 @@ spring.mail.host=smtp.sendgrid.net
 spring.mail.port=587
 spring.mail.username=apikey
 #spring.mail.password=
-
-algafood.email.remetente=AlgaFood <naoresponder@algafood.com.br>
+algafood.email.remetente=AlgaFood <devel.tester.dt@gmail.com>
 
 
 #spring.servlet.multipart.max-file-size=20KB
