--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -39,6 +39,8 @@ spring.mail.username=apikey
 #spring.mail.password=
 algafood.email.remetente=AlgaFood <devel.tester.dt@gmail.com>
 
+spring.freemarker.settings.locale="pt_BR"
+
 
 #spring.servlet.multipart.max-file-size=20KB
 #spring.servlet.multipart.max-request-size=20MB
