--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -37,9 +37,11 @@ spring.mail.host=smtp.sendgrid.net
 spring.mail.port=587
 spring.mail.username=apikey
 #spring.mail.password=
-algafood.email.remetente=AlgaFood <devel.tester.dt@gmail.com>
-
 spring.freemarker.settings.locale="pt_BR"
+
+algafood.email.remetente=AlgaFood <devel.tester.dt@gmail.com>
+algafood.email.impl=sandbox
+algafood.email.sandbox.destinatario=devel.tester.dt+destinatario@gmail.com
 
 
 #spring.servlet.multipart.max-file-size=20KB
