--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -40,7 +40,7 @@ spring.mail.username=apikey
 spring.freemarker.settings.locale="pt_BR"
 
 algafood.email.remetente=AlgaFood <devel.tester.dt@gmail.com>
-algafood.email.impl=sandbox
+algafood.email.impl=fake
 algafood.email.sandbox.destinatario=devel.tester.dt+destinatario@gmail.com
 
 
