--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
 		<squiggly.version>1.3.18</squiggly.version>
 		<jasperreports.version>6.12.2</jasperreports.version>
 		<aws-java-sdk-s3.version>1.11.801</aws-java-sdk-s3.version>
-		<spring-fox.version>2.9.2</spring-fox.version>
+		<springfox.version>2.9.2</springfox.version>
 	</properties>
 
 	<dependencies>
@@ -122,12 +122,17 @@
 	    <dependency>
 	        <groupId>io.springfox</groupId>
 	        <artifactId>springfox-swagger2</artifactId>
-	        <version>${spring-fox.version}</version>
+	        <version>${springfox.version}</version>
 	    </dependency>
 	    <dependency>
 	        <groupId>io.springfox</groupId>
 	        <artifactId>springfox-swagger-ui</artifactId>
-	        <version>${spring-fox.version}</version>
+	        <version>${springfox.version}</version>
+	    </dependency>
+	    <dependency>
+	        <groupId>io.springfox</groupId>
+	        <artifactId>springfox-bean-validators</artifactId>
+	        <version>${springfox.version}</version>
 	    </dependency>
 	</dependencies>
 
