--- a/pom.xml
+++ b/pom.xml
@@ -28,12 +28,6 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
-<!-- 			<exclusions> -->
-<!-- 				<exclusion> -->
-<!-- 					<groupId>org.junit.vintage</groupId> -->
-<!-- 					<artifactId>junit-vintage-engine</artifactId> -->
-<!-- 				</exclusion> -->
-<!-- 			</exclusions> -->
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -123,6 +117,12 @@
 	        <groupId>io.springfox</groupId>
 	        <artifactId>springfox-swagger2</artifactId>
 	        <version>${springfox.version}</version>
+	        <exclusions>
+	        	<exclusion>
+	        		<groupId>org.springframework.plugin</groupId>
+	        		<artifactId>spring-plugin-core</artifactId>
+	        	</exclusion>
+	        </exclusions>
 	    </dependency>
 	    <dependency>
 	        <groupId>io.springfox</groupId>
@@ -133,6 +133,12 @@
 	        <groupId>io.springfox</groupId>
 	        <artifactId>springfox-bean-validators</artifactId>
 	        <version>${springfox.version}</version>
+	        <exclusions>
+	        	<exclusion>
+	        		<groupId>org.springframework.plugin</groupId>
+	        		<artifactId>spring-plugin-core</artifactId>
+	        	</exclusion>
+	        </exclusions>
 	    </dependency>
 	    <dependency>
 	    	<groupId>org.springframework.boot</groupId>
