--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,6 +19,9 @@ spring.jackson.deserialization.fail-on-ignored-properties=true
 spring.mvc.throw-exception-if-no-handler-found=true
 spring.resources.add-mappings=false
 
+server.compression.enabled=true
+
+# Storage
 spring.datasource.hikari.maximum-pool-size=5
 spring.datasource.hikari.minimum-idle=3
 spring.datasource.hikari.idle-timeout=10000
@@ -33,6 +36,7 @@ algafood.storage.s3.bucket=algafood-israel
 algafood.storage.s3.regiao=sa-east-1
 algafood.storage.s3.diretorio-fotos=catalogo
 
+# Email
 spring.mail.host=smtp.sendgrid.net
 spring.mail.port=587
 spring.mail.username=apikey
