--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,6 +21,8 @@ spring.resources.add-mappings=false
 
 server.compression.enabled=true
 
+logging.loggly.token=seu_customer_token_aqui
+
 # Storage
 spring.datasource.hikari.maximum-pool-size=5
 spring.datasource.hikari.minimum-idle=3
