--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -49,8 +49,8 @@ algafood.email.remetente=AlgaFood <devel.tester.dt@gmail.com>
 algafood.email.impl=fake
 algafood.email.sandbox.destinatario=devel.tester.dt+destinatario@gmail.com
 
-spring.security.user.name=algafood
-spring.security.user.password=123456
+#spring.security.user.name=algafood
+#spring.security.user.password=123456
 
 
 #spring.servlet.multipart.max-file-size=20KB
